--- a/lecture15.html
+++ b/lecture15.html
@@ -463,6 +463,7 @@ document.write(`
 \]</div>
 <p>where g is a constant vector. Sketch the path of the particle.</p>
 <p><strong>Solution.</strong></p>
+<div class="toggle docutils container">
 <p>Since <span class="math notranslate nohighlight">\(\overrightarrow{O P}=\mathbf{r}\)</span>, the vector <span class="math notranslate nohighlight">\(\overrightarrow{O P}\)</span> is always in the direction of the constant vector <span class="math notranslate nohighlight">\(\mathbf{g}\)</span>. Therefore <span class="math notranslate nohighlight">\(P\)</span> moves along a straight line through the origin <span class="math notranslate nohighlight">\(O\)</span> in the direction of <span class="math notranslate nohighlight">\(\mathbf{g}\)</span>. At time <span class="math notranslate nohighlight">\(t\)</span>,</p>
 <div class="math notranslate nohighlight">
 \[
@@ -472,6 +473,7 @@ O P=|\overrightarrow{O P}|=\frac{1}{2} g t^{2} \quad \text { where } g=|\mathbf{
 \]</div>
 <p>Therefore the particle moves away from <span class="math notranslate nohighlight">\(O\)</span> in the direction of g , and its distance from <span class="math notranslate nohighlight">\(O\)</span> at time <span class="math notranslate nohighlight">\(t\)</span> is <span class="math notranslate nohighlight">\(g t^{2} / 2\)</span>. A sketch of the path is given below.</p>
 <img src="mas108_3D_particle_ex.png" alt="drawing" width="400"/>
+</div>
 </section>
 </div><p>Now we have shown how to describe the location of a particle, we also want to be able to describe its velocity and acceleration. For this, we need to know how to differentiate vectors.</p>
 <div class="proof definition admonition" id="definition-1">
@@ -573,6 +575,7 @@ O P=|\overrightarrow{O P}|=\frac{1}{2} g t^{2} \quad \text { where } g=|\mathbf{
 \]</div>
 <p>where <span class="math notranslate nohighlight">\(\mathbf{g}\)</span> is a constant vector. Find the velocity, speed, and acceleration of the particle at time <span class="math notranslate nohighlight">\(t\)</span>.</p>
 <p><strong>Solution.</strong></p>
+<div class="toggle docutils container">
 <p>The velocity is <span class="math notranslate nohighlight">\(\mathbf{v}(t)=\dot{\mathbf{r}}(t)\)</span>. Since <span class="math notranslate nohighlight">\(\mathbf{g}\)</span> is a constant,</p>
 <div class="math notranslate nohighlight">
 \[
@@ -587,6 +590,7 @@ O P=|\overrightarrow{O P}|=\frac{1}{2} g t^{2} \quad \text { where } g=|\mathbf{
 \mathbf{a}(t)=\dot{\mathbf{v}}(t)=\frac{\mathrm{d}}{\mathrm{d} t}(\mathrm{~g} t)=\mathbf{g} \tag{189}
 \end{equation*}
 \]</div>
+</div>
 </section>
 </div><p>Notice that velocity and acceleration are vectors, whereas speed is a scalar.</p>
 <div class="proof example admonition" id="example-3">
@@ -603,6 +607,7 @@ O P=|\overrightarrow{O P}|=\frac{1}{2} g t^{2} \quad \text { where } g=|\mathbf{
 (b) Show that the path of the particle is a unit circle around the origin.
 (c) Show that the acceleration is orthogonal to the velocity.</p>
 <p><strong>Solution.</strong></p>
+<div class="toggle docutils container">
 <p>(a) The velocity is</p>
 <div class="math notranslate nohighlight">
 \[
@@ -642,6 +647,7 @@ product as</p>
 \mathbf{a}(t) \cdot \mathbf{v}(t)=\binom{-\sin (t)}{-\cos (t)} \cdot\binom{\cos (t)}{-\sin (t)}=-\sin (t) \cos (t)+\cos (t) \sin (t)=0 \tag{195}
 \end{equation*}
 \]</div>
+</div>
 </section>
 </div><p>Recall from your Core module that, since the dot product vanishes, this means that <span class="math notranslate nohighlight">\(\mathbf{a}(t)\)</span> and <span class="math notranslate nohighlight">\(\mathbf{v}(t)\)</span> are orthogonal. Acceleration acting orthogonally to the direction of motion is sometimes called centripetal acceleration.</p>
 </section>
