--- a/lecture17.html
+++ b/lecture17.html
@@ -528,6 +528,7 @@ v^{2}(t)=u^{2}+2 a s(t) \tag{219}
 </ul>
 <p>After this period of 10 s , the lift is at rest at a height of 34 m above its starting point. Find the acceleration in Stage 1.</p>
 <p><strong>Solution.</strong></p>
+<div class="toggle docutils container">
 <p>We start by drawing a graph of velocity over time (Figure 25).</p>
 <img src="mas108_vel_time_ex.png" alt="drawing" width="400"/>
 <p><em>Figure 25: Change in velocity over time.</em></p>
@@ -543,12 +544,14 @@ v^{2}(t)=u^{2}+2 a s(t) \tag{219}
 \end{align*}
 \end{split}\]</div>
 <p>Therefore <span class="math notranslate nohighlight">\(a=2\)</span>, and the acceleration in Stage 1 is <span class="math notranslate nohighlight">\(2 \mathrm{~ms}^{-2}\)</span>.</p>
+</div>
 </section>
 </div><div class="proof example admonition" id="example-1">
 <p class="admonition-title"><span class="caption-number">Example 27 </span></p>
 <section class="example-content" id="proof-content">
 <p>A student standing on the edge of a cliff 75 m above sea level throws a stone vertically upwards with a speed of <span class="math notranslate nohighlight">\(10 \mathrm{~ms}^{-1}\)</span>. Find the time at which the stone hits the water. You can assume the acceleration due to gravity is <span class="math notranslate nohighlight">\(g=9.8 \mathrm{~ms}^{-2}\)</span>.</p>
 <p><strong>Solution.</strong></p>
+<div class="toggle docutils container">
 <p>As always, we start by drawing a sketch (Figure 26).</p>
 <img src="mas108_stone_cliff.png" alt="drawing" width="400"/>
 <p><em>Figure 26: Throwing a stone off a cliff</em></p>
@@ -564,6 +567,7 @@ water at time <span class="math notranslate nohighlight">\(t\)</span>. Then <spa
 \end{align*}
 \end{split}\]</div>
 <p>Then, as <span class="math notranslate nohighlight">\(t&gt;0\)</span>, we have <span class="math notranslate nohighlight">\(t=5.06\)</span> to three significant figures.</p>
+</div>
 </section>
 </div></section>
 <section id="lecture-17-homework-exercises">
