--- a/lecture18.html
+++ b/lecture18.html
@@ -529,10 +529,11 @@ z &amp; =\frac{V x \sin (\theta)}{V \cos (\theta)}-\frac{g x^{2}}{2 V^{2} \cos ^
 <div class="proof example admonition" id="example-0">
 <p class="admonition-title"><span class="caption-number">Example 28 </span></p>
 <section class="example-content" id="proof-content">
-<p>A person hits a ball with a bat at a height of 1 meter above the ground. The ball’s initial speed is <span class="math notranslate nohighlight">\(25 \mathrm{~ms}^{-1}\)</span> at an angle of <span class="math notranslate nohighlight">\(\frac{\pi}{6}\)</span> radians above the horizontal. Find the horizontal distance from the person to the place where the ball first bounces, assuming <span class="math notranslate nohighlight">\(g=9.8\)</span>.</p>
+<p>A player for Sheffield Bruins baseball club hits a ball at a height of 1 meter above the ground. The ball’s initial speed is <span class="math notranslate nohighlight">\(90mph\)</span> (~<span class="math notranslate nohighlight">\(40m/s\)</span>) at an angle of <span class="math notranslate nohighlight">\(\frac{\pi}{6}\)</span> radians above the horizontal. Find the horizontal distance from the person to the place where the ball first bounces, assuming <span class="math notranslate nohighlight">\(g=9.8\)</span>.</p>
 <img src="mas108_projectile_ex.png" alt="drawing" width="400"/>
 <p><em>Figure 28: The trajectory of a ball.</em></p>
 <p><strong>Solution.</strong></p>
+<div class="toggle docutils container">
 <p>As usual, we start with a sketch (Figure 28) Let the vertical height of the ball be <span class="math notranslate nohighlight">\(z \mathrm{~m}\)</span> above the point of projection and let the ball be <span class="math notranslate nohighlight">\(x \mathrm{~m}\)</span> horizontally from the person. Then</p>
 <div class="math notranslate nohighlight">
 \[
@@ -540,23 +541,24 @@ z &amp; =\frac{V x \sin (\theta)}{V \cos (\theta)}-\frac{g x^{2}}{2 V^{2} \cos ^
 z=x \tan (\theta)-\frac{g x^{2}}{2 V^{2}} \sec ^{2}(\theta) \tag{234}
 \end{equation*}
 \]</div>
-<p>where <span class="math notranslate nohighlight">\(V=25, g=9.8\)</span> and <span class="math notranslate nohighlight">\(\theta=\frac{\pi}{6}\)</span>. Then we have, working to three significant figures,</p>
+<p>where <span class="math notranslate nohighlight">\(V=45, g=9.8\)</span> and <span class="math notranslate nohighlight">\(\theta=\frac{\pi}{6}\)</span>. Then we have, working to three significant figures,</p>
 <div class="math notranslate nohighlight">
 \[
 \begin{equation*}
-z=0.577 x-0.0105 x^{2} \tag{235}
+z=0.577 x-0.00408 x^{2} \tag{235}
 \end{equation*}
 \]</div>
 <p>The ball reaches the ground when <span class="math notranslate nohighlight">\(z=-1, x=d\)</span>. This gives</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}
 \begin{align*}
-&amp; -1=0.577 d-0.0105 d^{2} \\
-\Longrightarrow &amp; 0.0105 d^{2}-0.577 d-1=0 \\
-\Longrightarrow &amp; d=\frac{0.577 \pm \sqrt{0.577^{2}+4 \times 0.0105}}{2 \times 0.0105} \tag{236}
+&amp; -1=0.577 d-0.00323 d^{2} \\
+\Longrightarrow &amp; 0.00408 d^{2}-0.577 d-1=0 \\
+\Longrightarrow &amp; d=\frac{0.577 \pm \sqrt{0.577^{2}+4 \times 0.00408}}{2 \times 0.00408} \tag{236}
 \end{align*}
 \end{split}\]</div>
-<p>Since <span class="math notranslate nohighlight">\(d\)</span> must be positive, we have <span class="math notranslate nohighlight">\(d \approx 57\)</span>, so the ball first bounces 57 m away from the place it was hit.</p>
+<p>Since <span class="math notranslate nohighlight">\(d\)</span> must be positive, we have <span class="math notranslate nohighlight">\(d \approx 73\)</span>, so the ball first bounces 73m (240 feet) away. (At the Bruins home ground this would probably mean a home run and a broken car window).</p>
+</div>
 </section>
 </div></section>
 <section id="lecture-18-homework-exercises">
