--- a/lecture2.html
+++ b/lecture2.html
@@ -652,16 +652,14 @@ U(t)=\frac{K U(0)}{U(0)+[K-U(0)] R^{-t}} \tag{11}
 <p>(multiply top and bottom by: <span class="math notranslate nohighlight">\(\quad U(0)+[K-U(0)] R^{-t}\)</span> )</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}
-\left(\begin{array}{ll}
+\begin{array}{ll}
 =\frac{M^{2} R(R-1) U(0)}{M\left\{U(0)+[M(R-1)-U(0)] R^{-t}\right\}+M(R-1) U(0)} &amp; (K=M(R-1)) \\
-=\frac{M R(R-1) U(0)}{U(0)+[M(R-1)-U(0)] R^{-t}+(R-1) U(0)}
-\end{array} \quad \quad \text { (cancel } M \mathrm{~s}\right)
+=\frac{M R(R-1) U(0)}{U(0)+[M(R-1)-U(0)] R^{-t}+(R-1) U(0)} &amp; (\text { cancel } M \mathrm{~s})
+\end{array} 
 \end{split}\]</div>
 <p><span class="math notranslate nohighlight">\(=\frac{M R(R-1) U(0)}{R U(0)+[M(R-1)-U(0)] R^{-t}}\)</span></p>
 <p><span class="math notranslate nohighlight">\(=\frac{M(R-1) U(0)}{U(0)+[M(R-1)-U(0)] R^{-(t+1)}}\)</span></p>
-<p>(cancel <span class="math notranslate nohighlight">\(R \mathrm{~s}\)</span> )</p>
 <p><span class="math notranslate nohighlight">\(=\frac{K U(0)}{U(0)+[K-U(0)] R^{-(t+1)}}\)</span></p>
-<p><span class="math notranslate nohighlight">\((K=M(R-1))\)</span></p>
 <p><span class="math notranslate nohighlight">\(=U(t+1)\)</span>,</p>
 <p>which is the left-hand side of Equation (9).</p>
 </div>
