--- a/lecture10.html
+++ b/lecture10.html
@@ -471,6 +471,7 @@ document.write(`
 \]</div>
 <p>(The reason for the minus sign is that the force is in the opposite direction to the extension, see Figure 15. The constant <span class="math notranslate nohighlight">\(\omega\)</span> will turn out to be the angular frequency of the oscillations, as we will see in the solution.) Find an expression for the extension, <span class="math notranslate nohighlight">\(x(t)\)</span>, as a function of time. Interpret the result physically, in terms of the movement of the mass, <span class="math notranslate nohighlight">\(m\)</span>.</p>
 <p><strong>Solution.</strong></p>
+<div class="toggle docutils container">
 <p>The ODE can be written <span class="math notranslate nohighlight">\(\ddot{x}+\omega^{2} x=0\)</span>, where <span class="math notranslate nohighlight">\(\omega\)</span> is a constant. To solve such an ODE, we use something called an ansatz. That’s a German word meaning, essentially, ‘an educated guess that will be verified later’. The ansatz we use here is that <span class="math notranslate nohighlight">\(x=A \cos (m t)\)</span> for constants <span class="math notranslate nohighlight">\(m\)</span> and <span class="math notranslate nohighlight">\(A \neq 0\)</span>. Then <span class="math notranslate nohighlight">\(\dot{x}=-m A \sin (m t)\)</span> and <span class="math notranslate nohighlight">\(\ddot{x}=-m^{2} A \cos (m t)\)</span>. Placing these expressions into the ODE <span class="math notranslate nohighlight">\(\ddot{x}=-\omega^{2} x\)</span> gives</p>
 <div class="math notranslate nohighlight">
 \[
@@ -489,6 +490,7 @@ x(t)=A \cos (\omega t) \tag{108}
 \end{equation*}
 \]</div>
 <p>Finally, we need to apply the initial condition. Notice that the question said ‘we stretch the spring to a distance <span class="math notranslate nohighlight">\(L\)</span> and release it at time <span class="math notranslate nohighlight">\(t=0\)</span> ‘. This means that the extension at time <span class="math notranslate nohighlight">\(t=0\)</span> is <span class="math notranslate nohighlight">\(L\)</span>, i.e. <span class="math notranslate nohighlight">\(x(0)=L\)</span>. Hence, by Equation (108), <span class="math notranslate nohighlight">\(L=x(0)=A \cos (0)=A\)</span>. Thus the solution is <span class="math notranslate nohighlight">\(x(t)=L \cos (\omega t)\)</span>.</p>
+</div>
 </section>
 </div><p>The physical interpretation is that the mass oscillates in perpetuity between <span class="math notranslate nohighlight">\(x=-L\)</span> and <span class="math notranslate nohighlight">\(x=L\)</span> with angular frequency <span class="math notranslate nohighlight">\(\omega\)</span>. The angular frequency is related to the period, <span class="math notranslate nohighlight">\(T\)</span>, of the oscillation via <span class="math notranslate nohighlight">\(\omega=2 \pi / T\)</span>. You may recall the definition of period from Section 3 as the smallest <span class="math notranslate nohighlight">\(T&gt;0\)</span> such that <span class="math notranslate nohighlight">\(x(t)=x(t+T)\)</span> for all <span class="math notranslate nohighlight">\(t\)</span>.</p>
 <section id="homogeneous-second-order-odes-with-constant-coefficients">
@@ -596,6 +598,7 @@ x(t)=\exp \left(-\frac{b t}{2}\right)[A \sin (q t)+B \cos (q t)] \tag{116}
 <p>Find an expression for <span class="math notranslate nohighlight">\(x(t)\)</span>, the location of the car at time <span class="math notranslate nohighlight">\(t\)</span> in terms of <span class="math notranslate nohighlight">\(\beta\)</span> and <span class="math notranslate nohighlight">\(m\)</span>.</p>
 <p>Suppose the car weighs 1000 kg ( kg is kilogrammes), its initial speed is <span class="math notranslate nohighlight">\(10 \mathrm{~ms}^{-1}\)</span> ( m is metres and <span class="math notranslate nohighlight">\(s\)</span> is seconds), its initial location is <span class="math notranslate nohighlight">\(x(0)=0\)</span>, and <span class="math notranslate nohighlight">\(\beta=100 \mathrm{kgs}^{-1}\)</span>. How far does the car travel in the next 10 seconds?</p>
 <p><strong>Solution.</strong></p>
+<div class="toggle docutils container">
 <p>The friction force is acting in the opposite direction to the motion of the car, so is
 negative. It is also proportional to the speed of the car, which is <span class="math notranslate nohighlight">\(\dot{x}\)</span>. Therefore the force acting on the car is <span class="math notranslate nohighlight">\(-\beta \dot{x}\)</span>.</p>
 <p>Now to solve Equation (117). If we let <span class="math notranslate nohighlight">\(b=\beta / m\)</span> then we can re-write Equation (117) as <span class="math notranslate nohighlight">\(\ddot{x}+b \dot{x}=0\)</span>. This is in the form of Equation (109) with <span class="math notranslate nohighlight">\(c=0\)</span>. Therefore we can apply Proposition 4, to give <span class="math notranslate nohighlight">\(x(t)=A \exp \left(m_{+} t\right)+B \exp \left(m_{-} t\right)\)</span>, where</p>
@@ -634,6 +637,7 @@ x(t)=10[1-\exp (-0.1 t)] \tag{122}
 \end{equation*}
 \]</div>
 <p>In the next 10 s , the car travels <span class="math notranslate nohighlight">\(x(10)=10[1-\exp (-1)] \approx 6.32 m\)</span>.</p>
+</div>
 </section>
 </div><div class="admonition note">
 <p class="admonition-title">Note</p>
