--- a/lecture8.html
+++ b/lecture8.html
@@ -562,11 +562,13 @@ dots at the points where <span class="math notranslate nohighlight">\(\sin (x)=0
 <p>(d) If <span class="math notranslate nohighlight">\(0&lt;U(0)&lt;a\)</span> what is the limit as <span class="math notranslate nohighlight">\(t \rightarrow \infty\)</span> of <span class="math notranslate nohighlight">\(U(t)\)</span> ?</p>
 <p>(e) If <span class="math notranslate nohighlight">\(a&lt;U(0)&lt;K\)</span> what is the limit as <span class="math notranslate nohighlight">\(t \rightarrow \infty\)</span> of <span class="math notranslate nohighlight">\(U(t)\)</span> ?</p>
 <p><strong>Solution.</strong></p>
+<div class="toggle docutils container">
 <p>(a) The equilibria are where <span class="math notranslate nohighlight">\(U(K-U)(U-a)=0\)</span>, so <span class="math notranslate nohighlight">\(U=0\)</span>, <span class="math notranslate nohighlight">\(a\)</span>, or <span class="math notranslate nohighlight">\(K\)</span>.</p>
 <p>(b) Figure 12 shows the phase line.</p>
 <p>(c) The arrows on the phase line (Figure 12) point into <span class="math notranslate nohighlight">\(U=0\)</span>, so <span class="math notranslate nohighlight">\(U=0\)</span> is a stable equilibrium point. They point out of <span class="math notranslate nohighlight">\(U=a\)</span> so <span class="math notranslate nohighlight">\(a\)</span> is unstable, and into <span class="math notranslate nohighlight">\(U=K\)</span> so <span class="math notranslate nohighlight">\(K\)</span> is stable.</p>
 <p>(d) Looking at the phase line (Figure 12) between <span class="math notranslate nohighlight">\(U=0\)</span> and <span class="math notranslate nohighlight">\(U=a\)</span>, we see that the arrow is pointing left towards the equilibrium point at <span class="math notranslate nohighlight">\(U=0\)</span>. Hence <span class="math notranslate nohighlight">\(U(t) \rightarrow 0\)</span> as <span class="math notranslate nohighlight">\(t \rightarrow \infty\)</span>.</p>
 <p>(e) Looking at the phase line (Figure 12) between <span class="math notranslate nohighlight">\(U=a\)</span> and <span class="math notranslate nohighlight">\(U=K\)</span>, we see that the arrow is pointing right towards the equilibrium point at <span class="math notranslate nohighlight">\(U=K\)</span>. Hence <span class="math notranslate nohighlight">\(U(t) \rightarrow K\)</span> as <span class="math notranslate nohighlight">\(t \rightarrow \infty\)</span>.</p>
+</div>
 </section>
 </div></section>
 <section id="lecture-8-homework-exercises">
