--- a/lecture3.html
+++ b/lecture3.html
@@ -582,24 +582,59 @@ B=B+r B(1-B)+r[B+r B(1-B)][1-B-r B(1-B)] \tag{18}
 \end{equation*}
 \]</div>
 <p>Equation (18) has an exact solution. It’s a long task to figure this out by hand, so instead we can just go on the www.wolframalpha.com website and type in our equation.</p>
-<p>It then tells us that
-$$</p>
+<p>It then tells us that</p>
 <div class="amsmath math notranslate nohighlight">
 \[\begin{equation*}
 B=\frac{r+2 \pm \sqrt{r^{2}-4}}{2 r} \tag{19}
 \end{equation*}\]</div>
+<p>Notice a few things. First, <span class="math notranslate nohighlight">\(A\)</span> has the same solutions a <span class="math notranslate nohighlight">\(B\)</span>. This can be seen simply by swaping <span class="math notranslate nohighlight">\(A\)</span> and <span class="math notranslate nohighlight">\(B\)</span> around in the above argument. Second, <span class="math notranslate nohighlight">\(B\)</span> is only defined when <span class="math notranslate nohighlight">\(r^{2}&gt;4\)</span>, i.e. <span class="math notranslate nohighlight">\(r&gt;2\)</span> (for those who know about imaginary numbers, <span class="math notranslate nohighlight">\(B\)</span> must be real; for those who don’t, just ignore this parenthetic comment). Third, if we put in <span class="math notranslate nohighlight">\(r=2.2\)</span>, we get <span class="math notranslate nohighlight">\(B=0.746247,1.16284\)</span>, to six significant figures, which agrees with what we observed in Table 5.</p>
+<img src="mas108_fig_logmap.png" alt="drawing" width="800"/>
+<p><em>Figure 6: Evolution of the logistic model from Equation (15), for (a) <span class="math notranslate nohighlight">\(r=1.5\)</span>, (b) <span class="math notranslate nohighlight">\(r=2.2\)</span>, (c) <span class="math notranslate nohighlight">\(r=2.5\)</span>, (d) <span class="math notranslate nohighlight">\(r=3\)</span>.</em></p>
+<p>This example shows that, even though a difference equation may admit steady states, it may never reach them. Equation (15) has steady states of 0 and 1 for any <span class="math notranslate nohighlight">\(r\)</span> (see Example 4), but it does not reach them if <span class="math notranslate nohighlight">\(r=2.2\)</span> and <span class="math notranslate nohighlight">\(U(0)=0.1\)</span>.</p>
+<div class="pst-scrollable-table-container"><table class="table">
+<thead>
+<tr class="row-odd"><th class="head text-left"><p>Time, <span class="math notranslate nohighlight">\(t\)</span> years</p></th>
+<th class="head text-left"><p>0</p></th>
+<th class="head text-left"><p>1</p></th>
+<th class="head text-left"><p>2</p></th>
+<th class="head text-left"><p>3</p></th>
+<th class="head text-left"><p>4</p></th>
+<th class="head text-left"><p>5</p></th>
+<th class="head text-left"><p>6</p></th>
+<th class="head text-left"><p>7</p></th>
+<th class="head text-left"><p>8</p></th>
+<th class="head text-left"><p>9</p></th>
+<th class="head text-left"><p>10</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="row-even"><td class="text-left"><p>Population size, <span class="math notranslate nohighlight">\(U(t)\)</span></p></td>
+<td class="text-left"><p>0.10</p></td>
+<td class="text-left"><p>0.33</p></td>
+<td class="text-left"><p>0.87</p></td>
+<td class="text-left"><p>1.15</p></td>
+<td class="text-left"><p>0.72</p></td>
+<td class="text-left"><p>1.22</p></td>
+<td class="text-left"><p>0.54</p></td>
+<td class="text-left"><p>1.16</p></td>
+<td class="text-left"><p>0.70</p></td>
+<td class="text-left"><p>1.22</p></td>
+<td class="text-left"><p>0.54</p></td>
+</tr>
+</tbody>
+</table>
+</div>
+<p><em>Table 6: Change in population size over time, using the model in Equation (15) with <span class="math notranslate nohighlight">\(r=2.5\)</span> and <span class="math notranslate nohighlight">\(U(0)=0.1\)</span>.</em></p>
+<p>Table 6 shows the case where <span class="math notranslate nohighlight">\(r=2.5\)</span>. Here, after going up until <span class="math notranslate nohighlight">\(t=3\)</span>, <span class="math notranslate nohighlight">\(U(t)\)</span> begins to oscillate up and down. However, unlike the <span class="math notranslate nohighlight">\(r=2.2\)</span> example, it does not settle on a pair of values. Continuing the sequence for more time, we see that the system oscillates between four values: <span class="math notranslate nohighlight">\(1.16,0.70,1.22\)</span>, and 0.54 (see Figure 6 c ). In principle, one can calculate these by solving the following simultaneously</p>
 <div class="math notranslate nohighlight">
-\[ \begin{align}\begin{aligned}Notice a few things. First, $A$ has the same solutions a $B$. This can be seen simply by swaping $A$ and $B$ around in the above argument. Second, $B$ is only defined when $r^{2}&gt;4$, i.e. $r&gt;2$ (for those who know about imaginary numbers, $B$ must be real; for those who don't, just ignore this parenthetic comment). Third, if we put in $r=2.2$, we get $B=0.746247,1.16284$, to six significant figures, which agrees with what we observed in Table 5.\\&lt;img src=&quot;mas108_fig_logmap.png&quot; alt=&quot;drawing&quot; width=&quot;800&quot;/&gt;\\*Figure 6: Evolution of the logistic model from Equation (15), for (a) $r=1.5$, (b) $r=2.2$, (c) $r=2.5$, (d) $r=3$.*\\This example shows that, even though a difference equation may admit steady states, it may never reach them. Equation (15) has steady states of 0 and 1 for any $r$ (see Example 4), but it does not reach them if $r=2.2$ and $U(0)=0.1$.\\| Time, $t$ years | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 |
-| :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- |
-| Population size, $U(t)$ | 0.10 | 0.33 | 0.87 | 1.15 | 0.72 | 1.22 | 0.54 | 1.16 | 0.70 | 1.22 | 0.54 |\\*Table 6: Change in population size over time, using the model in Equation (15) with $r=2.5$ and $U(0)=0.1$.*\\Table 6 shows the case where $r=2.5$. Here, after going up until $t=3$, $U(t)$ begins to oscillate up and down. However, unlike the $r=2.2$ example, it does not settle on a pair of values. Continuing the sequence for more time, we see that the system oscillates between four values: $1.16,0.70,1.22$, and 0.54 (see Figure 6 c ). In principle, one can calculate these by solving the following simultaneously\end{aligned}\end{align} \]</div>
-<div class="amsmath math notranslate nohighlight">
-\[\begin{align*}
+\[\begin{split}
+\begin{align*}
 &amp; B=A+r A(1-A) \\
 &amp; C=B+r B(1-B) \\
 &amp; D=C+r C(1-C) \\
 &amp; A=D+r D(1-D) \tag{20}
-\end{align*}\]</div>
-<p>$$</p>
+\end{align*}
+\end{split}\]</div>
 <p>but it is a rather lengthy calculation, so I won’t suffer you with it. Instead, I’ll give you a definition.</p>
 <div class="proof definition admonition" id="def3_1">
 <p class="admonition-title"><span class="caption-number">Definition 3 </span></p>
