--- a/lecture4.html
+++ b/lecture4.html
@@ -471,12 +471,12 @@ U(t)=U(0)(1+r)^{t}-\frac{s\left[(1+r)^{t}-1\right]}{r} \tag{22}
 <div class="math notranslate nohighlight">
 \[\begin{split}
 \begin{aligned}
-&amp; 0=M(1+r)^{T}-\frac{s\left[(1+r)^{T}-1\right]}{r}, \\
-\Longrightarrow &amp; r M(1+r)^{T}=s\left[(1+r)^{T}-1\right], \\
-\Longrightarrow &amp; (1+r)^{T}(s-r M)=s \\
-\Longrightarrow &amp; (1+r)^{T}=\frac{s}{s-r M}, \\
-\Longrightarrow &amp; T \ln (1+r)=\ln (s)-\ln (s-r M) \\
-\Longrightarrow &amp; T=\frac{\ln (s)-\ln (s-r M)}{\ln (1+r)} .
+ 0&amp;=M(1+r)^{T}-\frac{s\left[(1+r)^{T}-1\right]}{r}, \\
+\Longrightarrow  r M(1+r)^{T}&amp;=s\left[(1+r)^{T}-1\right], \\
+\Longrightarrow  (1+r)^{T}(s-r M)&amp;=s \\
+\Longrightarrow  (1+r)^{T}&amp;=\frac{s}{s-r M}, \\
+\Longrightarrow  T \ln (1+r)&amp;=\ln (s)-\ln (s-r M) \\
+\Longrightarrow  T&amp;=\frac{\ln (s)-\ln (s-r M)}{\ln (1+r)} .
 \end{aligned}
 \end{split}\]</div>
 <p>In general, <span class="math notranslate nohighlight">\(T\)</span> will not be an integer, so we will need to round up (why up?).</p>
