--- a/lecture5.html
+++ b/lecture5.html
@@ -658,13 +658,13 @@ U(t+\tau) &amp; =U(0)(1+r \tau)^{t / \tau} \\
 <div class="math notranslate nohighlight">
 \[\begin{split}
 \begin{align*}
-&amp; \int\left(\frac{1}{U}+\frac{1}{K-U}\right) \mathrm{d} U=\int r \mathrm{~d} t \\
-\Longrightarrow &amp; \ln (U)-\ln (K-U)=r t+c, \text { for a constant } c \\
-\Longrightarrow &amp; \ln \left(\frac{U}{K-U}\right)=r t+c \\
-\Longrightarrow &amp; \frac{U}{K-U}=C \exp (r t), \text { for } C=\exp (c) \\
-\Longrightarrow &amp; U=(K-U) C \exp (r t) \\
-\Longrightarrow &amp; U[1+C \exp (r t)]=K C \exp (r t) \\
-\Longrightarrow &amp; U(t)=\frac{K C \exp (r t)}{1+C \exp (r t)} \tag{62}
+ \int\left(\frac{1}{U}+\frac{1}{K-U}\right) \mathrm{d} U&amp;=\int r \mathrm{~d} t \\
+\Longrightarrow  \ln (U)-\ln (K-U)&amp;=r t+c, \text { for a constant } c \\
+\Longrightarrow  \ln \left(\frac{U}{K-U}\right)&amp;=r t+c \\
+\Longrightarrow  \frac{U}{K-U}&amp;=C \exp (r t), \text { for } C=\exp (c) \\
+\Longrightarrow  U&amp;=(K-U) C \exp (r t) \\
+\Longrightarrow  U[1+C \exp (r t)]&amp;=K C \exp (r t) \\
+\Longrightarrow  U(t)&amp;=\frac{K C \exp (r t)}{1+C \exp (r t)} \tag{62}
 \end{align*}
 \end{split}\]</div>
 <p>(Technical aside: as in the previous example, we have ignored the modulus sign when taking the natural logarithm, thus finding a solution that has <span class="math notranslate nohighlight">\(0&lt;U(t)&lt;K\)</span> which is correct because <span class="math notranslate nohighlight">\(0&lt;U(0)=K / 10&lt;K\)</span>.) Notice that, as <span class="math notranslate nohighlight">\(t\)</span> gets very big, <span class="math notranslate nohighlight">\(U(t)\)</span> approaches <span class="math notranslate nohighlight">\(K\)</span>, so we always reach a steady state solution (e.g. Figure 8).</p>
@@ -674,11 +674,11 @@ U(t+\tau) &amp; =U(0)(1+r \tau)^{t / \tau} \\
 <div class="math notranslate nohighlight">
 \[\begin{split}
 \begin{align*}
-&amp; \frac{K}{10}=U(0)=\frac{K C \exp (0)}{1+C \exp (0)} \\
-\Longrightarrow &amp; \frac{1}{10}=\frac{C}{1+C} \\
-\Longrightarrow &amp; \frac{1+C}{10}=C \\
-\Longrightarrow &amp; \frac{1}{10}=\frac{9 C}{10} \\
-\Longrightarrow &amp; C=\frac{1}{9} \tag{63}
+ \frac{K}{10}=U(0)&amp;=\frac{K C \exp (0)}{1+C \exp (0)} \\
+\Longrightarrow  \frac{1}{10}&amp;=\frac{C}{1+C} \\
+\Longrightarrow  \frac{1+C}{10}&amp;=C \\
+\Longrightarrow  \frac{1}{10}&amp;=\frac{9 C}{10} \\
+\Longrightarrow  C&amp;=\frac{1}{9} \tag{63}
 \end{align*}
 \end{split}\]</div>
 <p>Hence the particular solution is</p>
