--- a/lecture6.html
+++ b/lecture6.html
@@ -576,13 +576,13 @@ differentiated twice. Here are two examples</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}
 \begin{align*}
-&amp; \frac{\mathrm{d} U}{\mathrm{~d} t}+p(t) U=0 \\
-\Longrightarrow &amp; \frac{\mathrm{d} U}{\mathrm{~d} t}=-p(t) U \\
-\Longrightarrow &amp; \frac{1}{U} \frac{\mathrm{d} U}{\mathrm{~d} t}=-p(t) \\
-\Longrightarrow &amp; \int \frac{1}{U} \frac{\mathrm{d} U}{\mathrm{~d} t} \mathrm{~d} t=-\int p(t) \mathrm{d} t \\
-\Longrightarrow &amp; \int \frac{1}{U} \mathrm{~d} U=-\int p(t) \mathrm{d} t \\
-\Longrightarrow &amp; \ln (|U|)=c-\int p(t) \mathrm{d} t \text { for a constant } c \\
-\Longrightarrow &amp; U(t)=A \exp \left(-\int p(t) \mathrm{d} t\right) \tag{90}
+ \frac{\mathrm{d} U}{\mathrm{~d} t}+p(t) U&amp;=0 \\
+\Longrightarrow  \frac{\mathrm{d} U}{\mathrm{~d} t}&amp;=-p(t) U \\
+\Longrightarrow  \frac{1}{U} \frac{\mathrm{d} U}{\mathrm{~d} t}&amp;=-p(t) \\
+\Longrightarrow  \int \frac{1}{U} \frac{\mathrm{d} U}{\mathrm{~d} t} \mathrm{~d} t&amp;=-\int p(t) \mathrm{d} t \\
+\Longrightarrow  \int \frac{1}{U} \mathrm{~d} U&amp;=-\int p(t) \mathrm{d} t \\
+\Longrightarrow  \ln (|U|)&amp;=c-\int p(t) \mathrm{d} t \text { for a constant } c \\
+\Longrightarrow  U(t)&amp;=A \exp \left(-\int p(t) \mathrm{d} t\right) \tag{90}
 \end{align*}
 \end{split}\]</div>
 <p>where we can pick <span class="math notranslate nohighlight">\(A=\exp (c)\)</span> for solutions where <span class="math notranslate nohighlight">\(U(t)&gt;0\)</span> or <span class="math notranslate nohighlight">\(A=-\exp (c)\)</span> for solutions where <span class="math notranslate nohighlight">\(U(t)&gt;0\)</span>.</p>
